fixed gaps in footer css

--- a/frontend/src/app/components/footer/footer.component.scss
+++ b/frontend/src/app/components/footer/footer.component.scss
@@ -4,7 +4,7 @@
   height: 579px;
   display: flex;
   flex-direction: column;
-  gap: 70px;
+  gap: 35px;
 }
 
 ul {
